--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .streamlit/secrets.toml
-*.ipynb
-*.csv
-*.json
 frontend/
 log/
 pages/
+admin/
+tools/
+notebook/
+transformers/
+users.csv
+users.yaml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
