--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,17 @@
 cookie:
-  expiry_days: 30
+  expiry_days: 1
   key: some_signature_key
   name: some_cookie_name
 credentials:
   usernames:
-    cl0803:
-      email: cl0803@example.com
-      name: cl0803
-      password: $2b$12$.lE2xoqkNICqg4V8hv.kte0FzSw32KNGbnfAxqMtdc.gXpDeTmmIa
+    admin:
+      email: admin@example.org
+      name: admin
+      password: $2b$12$nXVSJ0DvDqmmnQP8o2krV.6BGvBErrXINWxTBWTLFSpkKSEfvSzES
+    x001:
+      email: x001@example.org
+      name: x001
+      password: $2b$12$zQtekTahtxfZjGP4iUGc2OOFRQVEYWlUcOwj2IuTy10LXDDrMVx6C
 pre-authorized:
   emails:
   - melsby@gmail.com
